Added missing dependency for cucumber java. Added new dependencies, updated versions of other dependencies, and deleted deprecated ones. Changed names in the feature file